Debug RES_PATH and getResource